--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -25,6 +26,8 @@
         </activity>
 
         <service android:name=".service.LoginService" />
+        <service android:name=".service.BuscaAmostrasService" />
+        <receiver android:name=".receivers.InternetLigadaReceiver" />
     </application>
 
 </manifest>
